--- a/src/server/common/templates/partials/navigation/navigation.njk
+++ b/src/server/common/templates/partials/navigation/navigation.njk
@@ -11,18 +11,36 @@
             </a>
           </li>
         {% endfor %}
+        
+        {% if isAuthenticated %}
+          <li class="app-navigation__list-item">
+            <a class="app-navigation__link{% if currentPath and currentPath.startsWith('/admin') %} app-navigation__link--active{% endif %}"
+               href="/admin"
+               data-testid="nav-admin">
+              Admin
+            </a>
+          </li>
+        {% endif %}
       </ul>
       
       <ul class="app-navigation__actions">
-        {% for item in navigation.actions %}
+        {% if isAuthenticated %}
           <li class="app-navigation__list-item">
-            <a class="app-navigation__link{% if item.isActive %} app-navigation__link--active{% endif %}"
-              href="{{ item.url }}"
-              data-testid="nav-{{ item.text | lower | replace(" ", "-") }}">
-              {{ item.text }}
+            <a class="app-navigation__link"
+               href="/auth/logout"
+               data-testid="nav-sign-out">
+              Sign out
             </a>
           </li>
-        {% endfor %}
+        {% else %}
+          <li class="app-navigation__list-item">
+            <a class="app-navigation__link{% if currentPath == '/auth/login' %} app-navigation__link--active{% endif %}"
+               href="/auth/login"
+               data-testid="nav-sign-in">
+              Sign in
+            </a>
+          </li>
+        {% endif %}
       </ul>
     </div>
   </div>
