--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -14,7 +14,11 @@
       {% for change in history %}
         <div class="timeline__event">
           <h3 class="timeline__event-title govuk-heading-s">
-            {% if change.changes.status and change.changes.status.from !== change.changes.status.to %}
+            {% if change.type === 'profession' %}
+              {# Profession comment #}
+              Comment:
+            {% elif change.changes.status and change.changes.status.from !== change.changes.status.to %}
+              {# Project overall status update #}
               Delivery status update:
               <strong class="govuk-tag 
                 {% if change.changes.status.to === "RED" %}govuk-tag--red
@@ -25,24 +29,14 @@
               </strong>
             {% elif change.changes.name %}
               Project name updated
+            {% elif change.changes.commentary and change.type === 'project' %}
+              Project commentary updated
             {% else %}
-              Comment:
+              General update
             {% endif %}
           </h3>
           <strong class="govuk-tag govuk-tag--grey govuk-!-margin-bottom-2" style="white-space: nowrap; font-size: 10px; line-height: 1; padding: 3px 6px;">
-            {% if change.changedBy === 'system' %}
-              {% set professions = [
-                'DELIVERY MANAGEMENT',
-                'PRODUCT MANAGEMENT',
-                'USER CENTRED DESIGN',
-                'ARCHITECTURE',
-                'SOFTWARE DEVELOPMENT',
-                'BUSINESS ANALYSIS'
-              ] %}
-              {{ professions | random }}
-            {% else %}
-              {{ change.changedBy | upper }}
-            {% endif %}
+            {{ change.changedBy | upper }}
           </strong>
           {% if change.changes.commentary %}
             <p class="govuk-body">{{ change.changes.commentary.to }}</p>
@@ -115,23 +109,72 @@
         {{ projectEngagementTimeline(projectHistory) }}
       {% endset %}
 
-      {{ govukTabs({
-        items: [
+      {% set professionsHtml %}
+        <h2 class="govuk-heading-m">Profession Assessments</h2>
+        {% if project.professions and project.professions.length > 0 %}
+          <div class="govuk-grid-row">
+            {% for profession in project.professions %}
+              <div class="govuk-grid-column-one-third">
+                <div class="govuk-card govuk-card--clickable" style="border: 1px solid #b1b4b6; padding: 15px; margin-bottom: 20px; height: 100%;">
+                  <div class="govuk-card__content">
+                    <h3 class="govuk-heading-m">
+                      {{ profession.name }}
+                    </h3>
+                    <p class="govuk-body">
+                      Status: 
+                      <strong class="govuk-tag 
+                        {% if profession.status === 'RED' %}govuk-tag--red
+                        {% elif profession.status === 'AMBER' %}govuk-tag--yellow
+                        {% elif profession.status === 'GREEN' %}govuk-tag--green
+                        {% endif %}">
+                        {{ profession.status }}
+                      </strong>
+                    </p>
+                    <p class="govuk-body">{{ profession.commentary }}</p>
+                    <p class="govuk-body">
+                      <a href="/projects/{{ project.id }}/professions/{{ profession.professionId }}/history" class="govuk-link">View history</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        {% else %}
+          <p class="govuk-body">No profession assessments have been added to this project.</p>
+        {% endif %}
+      {% endset %}
+
+      {% set tabItems = [
+        {
+          id: "overview",
+          label: "Overview",
+          panel: {
+            html: overviewHtml
+          }
+        },
+        {
+          id: "project-engagement",
+          label: "Project engagement",
+          panel: {
+            html: engagementHtml
+          }
+        }
+      ] %}
+      
+      {% if isAuthenticated %}
+        {% set tabItems = tabItems.concat([
           {
-            id: "overview",
-            label: "Overview",
+            id: "professions",
+            label: "Profession assessments",
             panel: {
-              html: overviewHtml
-            }
-          },
-          {
-            id: "project-engagement",
-            label: "Project engagement",
-            panel: {
-              html: engagementHtml
+              html: professionsHtml
             }
           }
-        ]
+        ]) %}
+      {% endif %}
+
+      {{ govukTabs({
+        items: tabItems
       }) }}
 
       {% if isAuthenticated %}
